--- a/config.json
+++ b/config.json
@@ -24,15 +24,18 @@
     }
   },
   "streams": {
-    "27aec28e-6181-4753-9acd-0456a75f0289": {
+    "demo1": {
+      "name": "test video stream 1",
       "channels": {
         "0": {
-          "url": "rtmp://171.25.232.10/12d525bc9f014e209c1280bc0d46a87e",
+          "name": "ch1",
+          "url": "rtsp://user:password@ip:554",
+          "on_demand": true,
           "debug": false,
-          "audio": true
+          "audio": true,
+          "status": 0
         }
-      },
-      "name": "111111111"
+      }
     }
   }
 }
